--- a/仿新浪注册页面.html
+++ b/仿新浪注册页面.html
@@ -43,20 +43,36 @@
         // 如果输入不是6到16位，则提示错误信息颜色为红色 小图标变化
         // 因为里面变化样式较多，我们采取className修改样式
         // 1.获取元素
-        var ipt = document.querySelector('.ipt');
-        var message = document.querySelector('.message');
-        //2. 注册事件 失去焦点
-        ipt.onblur = function() {
-            // 根据表单里面值的长度 ipt.value.length
-            if (this.value.length < 6 || this.value.length > 16) {
-                // console.log('错误');
-                message.className = 'message wrong';
-                message.innerHTML = '您输入的位数不对要求6~16位';
-            } else {
-                message.className = 'message right';
-                message.innerHTML = '您输入的正确';
+        // var ipt = document.querySelector('.ipt');
+        // var message = document.querySelector('.message');
+        // //2. 注册事件 失去焦点
+        // ipt.onblur = function() {
+        //     // 根据表单里面值的长度 ipt.value.length
+        //     if (this.value.length < 6 || this.value.length > 16) {
+        //         // console.log('错误');
+        //         message.className = 'message wrong';
+        //         message.innerHTML = '您输入的位数不对要求6~16位';
+        //     } else {
+        //         message.className = 'message right';
+        //         message.innerHTML = '您输入的正确';
+        //     }
+        // }
+        // 获取元素
+            var ipt=document.querySelector('.ipt');
+            var message=document.querySelector('.message');
+            //2. 注册事件 失去焦点
+            ipt.onblur=function(){
+                // 根据表单里面值的长度 ipt.value.length
+                if(this.value.length<6||this.value.length>16){
+                    console.log('错误');
+                    message.className='message wrong';
+                    message.innerHTML='您输入的位数不对，要输入6-16位';
+                }else{
+                    console.log('正确');
+                    message.className='message right';
+                    message.innerHTML='正确！';
+                }
             }
-        }
     </script>
 </body>
  
