--- a/百度换肤.html
+++ b/百度换肤.html
@@ -48,18 +48,17 @@
         <li><img src="images/4.jpg"></li>
     </ul>
     <script>
-        // 1. 获取元素 
-        var imgs = document.querySelector('.baidu').querySelectorAll('img');
-        // console.log(imgs);
-        // 2. 循环注册事件 
-        for (var i = 0; i < imgs.length; i++) {
-            imgs[i].onclick = function() {
-                // this.src 就是我们点击图片的路径   images/2.jpg
-                // console.log(this.src);
-                // 把这个路径 this.src 给body 就可以了
-                document.body.style.backgroundImage = 'url(' + this.src + ')';
+        // 这里获取的是class类名的名字  选中li里面的img标签
+        var imgs=document.querySelector('.baidu').querySelectorAll('img');
+        // console.log(imgs)
+        // 循环注册事件
+        for(var i=0;i< imgs.length;i++){
+            imgs[i].onclick=function(){
+                // 改变的是背景图片  改变对应的路径用this.src
+                document.body.style.backgroundImage='url('+this.src+')';
             }
         }
+
     </script>
 </body>
  
