--- a/操作元素之表单属性设置.html
+++ b/操作元素之表单属性设置.html
@@ -17,7 +17,7 @@
             input.value='被点击了，也被禁用了';
             // 如果想要某个表单被禁用，不能再点击 disabed 
             this.disabled=true;
-            // this指向的是事件函数的调用者
+            // this指向的是事件函数的调用者 btn
         }
         
 
