--- a/动态生成表格-创建学生数据.html
+++ b/动态生成表格-创建学生数据.html
@@ -68,8 +68,13 @@
             }
             // 3. 创建有删除2个字的单元格 
             var td = document.createElement('td');
-            td.innerHTML = '<a href="javascript:;">删除 </a>';
+            td.innerHTML = '<a href="javascript:;">删除   </a>';
             tr.appendChild(td);
+            // 4. 删除操作
+            var as= document.querySelectorAll('a');
+            for(var i=0;i<as.length;i++){
+                tbody.removeChild(this,parentNode.parentNode)
+            }
  
         }
 
