--- a/冒泡排序.html
+++ b/冒泡排序.html
@@ -34,11 +34,11 @@
     })
     console.log(arr)
 
-    // let num1 = 10
-    // let num2 = 20
-    // let temp = num1
-    // num1 = num2
-    // num2 = temp
+    let num1 = 10
+    let num2 = 20
+    let temp = num1
+    num1 = num2
+    num2 = temp
   </script>
 </body>
 
